--- a/bdga/asset/styles.css
+++ b/bdga/asset/styles.css
@@ -115,7 +115,7 @@ input, textarea, button, select {
 
 .botonera {
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(5, 1fr);
       gap: 20px;
       max-width: 800px;
       margin: 20px auto;
@@ -426,20 +426,35 @@ td form {
 }
 
 .filters form {
+   flex: 1;      
    display: flex;
    gap: 10px;
    align-items: center;
+   width: 100%;
+   max-width: 800px;
+   flex-wrap: nowrap;
 }
 
 .filters button[type="submit"],
 .filters button.limpiar-filtros-btn {
+   flex: 1;      
    width: 150px;
-   padding: 10px;
+   padding: 10px 20px;
    font-size: 16px;
    cursor: pointer;
    border-radius: 10px;
    border: 1px solid #ccc;
    background-color: rgb(16, 199, 40);
+   white-space: nowrap;
+}
+
+.filters input[type="text"] {
+    flex: 1;
+    min-width: 200px;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
 }
 
 .filters button[type="submit"]:hover,
